--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresql://Localhost:5432/hogwarts
+spring.datasource.username=student
+spring.datasource.password=chocolatefrog
+spring.jpa.hibernate.ddl-auto=update
