--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:postgresql://Localhost:5432/hogwarts
 spring.datasource.username=student
 spring.datasource.password=chocolatefrog
 spring.jpa.hibernate.ddl-auto=update
+
+path.to.avatars.folder= avatars
