--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://Localhost:5432/hogwarts
 spring.datasource.username=student
 spring.datasource.password=chocolatefrog
 spring.jpa.hibernate.ddl-auto=update
-
-path.to.avatars.folder= avatars
-
+path.to.avatars.folder=avatars
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+logging.level.ru.hogwarts.school=DEBUG
+server.port=8080
